--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Anthony Perri, Engineer</title>
-				<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Anthony Perri!</h1>
-				<p>Engineer <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:anthonyeperri@gmail.com">email</a></li>
-        		<li><a href="https://github.com/anthonyeperri">github.com/anthonyeperri</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Anthony Perri, Engineer
+---
+<div class="blurb">
+	<h1>Hi there, I'm Anthony Perri!</h1>
+	<p>Engineer. <a href="/about">Read more about me...</a></p>
+</div><!-- /.blurb -->
