--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Anthony Perri, Engineer
+title: Hank Quinlan, Horrible Cop
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Anthony Perri!</h1>
-	<p>Engineer. <a href="/about">Read more about me...</a></p>
-</div><!-- /.blurb -->
+
+		<div class="blurb">
+			<h1>Hi there, I'm Hank Quinlan!</h1>
+			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+		</div> 
