--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: CV of Your Name
+title: CV of Anthony Perri
 ---
 
 	<div class="cv">
@@ -11,7 +11,7 @@ title: CV of Your Name
 					Street Address<br>
 					City State 12345<br>
 					<abbr title="phone">P:</abbr> (123) 456-7890<br>
-					<span class="obfuscate">youremailaddress@email.com</span>
+					<span class="obfuscate">anthonyeperri@gmail.com</span>
 					</address>
 
 					<h2>Select Publications</h2>
